[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/icons/flash.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/food-apple.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/cube.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/water.png" type="Texture" id=4]
[ext_resource path="res://scripts/gui.gd" type="Script" id=5]
[ext_resource path="res://prefabs/ui/overview.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/right-sidebar.gd" type="Script" id=7]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 84.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metal" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 24.0

[node name="Texture" type="TextureRect" parent="HBoxContainer/VBoxContainer/Metal"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Metal"]
margin_left = 28.0
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "0"

[node name="Power" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 84.0
margin_bottom = 52.0

[node name="Texture" type="TextureRect" parent="HBoxContainer/VBoxContainer/Power"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Power"]
margin_left = 28.0
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "0"

[node name="Food" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 84.0
margin_bottom = 80.0

[node name="Texture" type="TextureRect" parent="HBoxContainer/VBoxContainer/Food"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Food"]
margin_left = 28.0
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "0"

[node name="Water" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 84.0
margin_bottom = 108.0

[node name="Texture" type="TextureRect" parent="HBoxContainer/VBoxContainer/Water"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Water"]
margin_left = 28.0
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "0"

[node name="BtnCreateShip" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 84.0
margin_bottom = 132.0
text = "Create ship"

[node name="BtnBackToGalaxy2" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 84.0
margin_bottom = 156.0
text = "To galaxy"

[node name="BtnSave" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 84.0
margin_bottom = 180.0
text = "Save"

[node name="BtnBackToMenu" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 84.0
margin_bottom = 204.0
text = "Menu"

[node name="BtnExit" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 84.0
margin_bottom = 228.0
text = "Exit"

[node name="VSplit" type="HSplitContainer" parent="HBoxContainer"]
margin_left = 88.0
margin_right = 554.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="Panel" type="PanelContainer" parent="HBoxContainer"]
margin_left = 558.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 459.0
margin_bottom = 593.0

[node name="Tabs" type="Tabs" parent="HBoxContainer/Panel/VBoxContainer"]
margin_right = 452.0
margin_bottom = 24.0
script = ExtResource( 7 )

[node name="Overview" parent="HBoxContainer/Panel/VBoxContainer" instance=ExtResource( 6 )]
margin_left = 0.0
margin_top = 28.0
margin_right = 452.0
margin_bottom = 562.0
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/Panel/VBoxContainer"]
margin_top = 566.0
margin_right = 452.0
margin_bottom = 586.0
[connection signal="pressed" from="HBoxContainer/VBoxContainer/BtnCreateShip" to="." method="_on_create_ship"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/BtnBackToGalaxy2" to="." method="_on_back_to_galaxy"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/BtnSave" to="." method="_on_save"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/BtnBackToMenu" to="." method="_on_back_to_menu"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/BtnExit" to="." method="_on_exit"]
